[workspace]

members = [
    "plugins/binary/crates/model",
    "plugins/binary/crates/plugin",
    "plugins/config/crates/model",
    "plugins/config/crates/plugin",
    "plugins/file/crates/model",
    "plugins/file/crates/plugin",
    "plugins/json/crates/model",
    "plugins/json/crates/plugin",
    "plugins/system-environment/crates/model",
    "plugins/system-environment/crates/plugin",
    "deployment"
]
resolver = "3"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/reactive-graph/sys"
homepage = "https://www.reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]
rust-version = "1.85.0"

[workspace.dependencies]
async-std = "1.12"
async-trait = "0.1"
base64 = "0.22"
crossbeam = "0.8"
data-url = "0.3"
http = "0.2"
infer = "0.19"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = ["console_appender", "file_appender", "toml_format"] }
matchit = "0.8"
mime_guess = "2.0"
notify = { version = "8.1", features = ["serde", "crossbeam-channel"] }
paste = "1.0"
rust-embed = { version = "8.7", features = ["debug-embed", "compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
springtime = "1.0"
springtime-di = { version = "1.0", default-features = false, features = ["threadsafe", "derive"] }
shellexpand = "3.0"
strum_macros = "0.27"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.17", features = ["serde", "v4", "v5"] }

### Prefer git to crates.io for development

reactive-graph-behaviour-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-graph = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-runtime-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["derive"] }
reactive-graph-type-system-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["json5", "toml"] }

reactive-graph-std-base-model = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }
reactive-graph-std-result-model = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }
reactive-graph-std-value-model = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
