[package]
name = "reactive-graph-sys-system-environment-model"
description = "Reactive Graph - SYS - System Environment - Model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }

[dev-dependencies]
reactive-graph-graph = { workspace = true, features = ["test"] }

[lib]
crate-type = ["lib"]

[lints]
workspace = true
