[package]
name = "reactive-graph-sys-system-environment"
description = "Reactive Graph - SYS - System Environment"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-sys-system-environment"
depends = "reactive-graph, libreactive-graph-plugin-base, libreactive-graph-plugin-value"
assets = [
    ["target/release/libreactive_graph_sys_system_environment.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_sys_system_environment.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-reactive-service-api = { workspace = true, features = ["derive"] }
reactive-graph-runtime-model = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-model-base = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }
reactive-graph-model-value = { version = "0.10.0", git = "https://github.com/reactive-graph/std.git" }

reactive-graph-sys-system-environment-model = { version = "0.10.0", path = "../../crates/model" }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
